fixed middle-content overflow

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ main {
 }
 
 .left, .right {
+    height: 825px;
     background-color: whitesmoke;
     border-left: 1px solid silver;
     border-right: 1px solid silver;
@@ -136,7 +137,7 @@ header {
 
 .middle-content {
     display: grid;
-    grid-template-columns: 200px 225px 155px;
+    grid-template-columns: 180px 215px 145px;
     color: blue;
 }
 
